--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 <body class="bg-gray-100 p-4 sm:p-8">
 
     <div class="max-w-4xl mx-auto bg-white rounded-3xl shadow-xl p-6 sm:p-10 mb-8">
-        <h1 class="text-3xl sm:text-4xl font-bold text-center text-teal-600 mb-2">台灣一日遊行程票選</h1>
-        <p class="text-center text-gray-500 mb-8">為下一次的團體旅行，從以下精彩行程中投下您寶貴的一票！</p>
 
         <!-- 選單區塊 -->
         <nav class="mb-8 p-4 bg-teal-50 rounded-xl shadow-inner">
@@ -39,10 +37,14 @@
             <!-- 北台灣行程 -->
             <div id="taipei" class="bg-gradient-to-br from-cyan-50 to-cyan-100 rounded-2xl shadow-md p-6 border border-cyan-200">
                 <h2 class="text-2xl font-bold text-cyan-800 mb-4">北台灣：經典地標巡禮</h2>
-                <p class="text-gray-700 leading-relaxed mb-4">
-                    **07:00 台北車站出發。**
-                    一次走訪北海岸三大經典景點！在**野柳**欣賞鬼斧神工的女王頭地景；在**九份**老街漫步，感受懷舊山城氛圍，品嚐芋圓、草仔粿等特色美食；最後到**十分**，在鐵道上施放天燈，將願望寫上天空，是個結合自然、人文與浪漫的豐富旅程。**預計18:00返回台北車站。**
+                <p class="text-gray-700 leading-relaxed mb-2">
+                    行程將從台北車站展開，建議於上午7點前抵達。預計18:00返回台北車站。
                 </p>
+                <ul class="list-disc list-inside text-gray-700 space-y-1 mb-4">
+                    <li>野柳：欣賞鬼斧神工的女王頭地景。</li>
+                    <li>九份：漫步懷舊山城老街，品嚐芋圓、草仔粿等美食。</li>
+                    <li>十分：在鐵道上施放天燈，將願望寫上天空。</li>
+                </ul>
                 <div class="flex flex-wrap gap-2 text-sm text-gray-500">
                     <span class="bg-gray-200 rounded-full px-3 py-1">適合包車</span>
                     <span class="bg-gray-200 rounded-full px-3 py-1">首次訪台</span>
@@ -53,10 +55,14 @@
             <!-- 苗栗行程 -->
             <div id="miaoli" class="bg-gradient-to-br from-lime-50 to-lime-100 rounded-2xl shadow-md p-6 border border-lime-200">
                 <h2 class="text-2xl font-bold text-lime-800 mb-4">苗栗：悠閒客家美食之旅</h2>
-                <p class="text-gray-700 leading-relaxed mb-4">
-                    **07:00 台北車站出發。**
-                    遠離城市喧囂，享受苗栗的慢活步調。行程將以三義地區為主，探訪舊山線鐵道勝興車站，並品嚐道地的客家菜、漫步在悠靜的鄉村小路，讓身心靈都能得到徹底的放鬆。**預計18:00返回台北車站。**
+                <p class="text-gray-700 leading-relaxed mb-2">
+                    行程將從台北車站展開，建議於上午7點前抵達。預計18:00返回台北車站。
                 </p>
+                <ul class="list-disc list-inside text-gray-700 space-y-1 mb-4">
+                    <li>三義：探訪舊山線鐵道勝興車站。</li>
+                    <li>美食：品嚐道地客家菜、漫步悠靜鄉村小路。</li>
+                    <li>放鬆：享受慢活步調，讓身心靈得到徹底放鬆。</li>
+                </ul>
                 <div class="flex flex-wrap gap-2 text-sm text-gray-500">
                     <span class="bg-gray-200 rounded-full px-3 py-1">美食主義者</span>
                     <span class="bg-gray-200 rounded-full px-3 py-1">深度慢活</span>
@@ -66,10 +72,14 @@
             <!-- 拉拉山行程 -->
             <div id="lalashan" class="bg-gradient-to-br from-amber-50 to-amber-100 rounded-2xl shadow-md p-6 border border-amber-200">
                 <h2 class="text-2xl font-bold text-amber-800 mb-4">拉拉山：原始森林與高山果物之旅</h2>
-                <p class="text-gray-700 leading-relaxed mb-4">
-                    **07:00 台北車站出發。**
-                    沉浸在拉拉山的原始巨木林中，欣賞千年神木群的壯觀。在山林步道中健行，吸收滿滿的芬多精，並在回程路上品嚐當季盛產的高山水果，是個充滿大自然能量的健康之旅。**預計18:00返回台北車站。**
+                <p class="text-gray-700 leading-relaxed mb-2">
+                    行程將從台北車站展開，建議於上午7點前抵達。預計18:00返回台北車站。
                 </p>
+                <ul class="list-disc list-inside text-gray-700 space-y-1 mb-4">
+                    <li>巨木林：沉浸在原始森林中，欣賞千年神木群。</li>
+                    <li>健行：在山林步道中健行，吸收滿滿芬多精。</li>
+                    <li>高山水果：回程路上品嚐當季盛產的高山水果。</li>
+                </ul>
                 <div class="flex flex-wrap gap-2 text-sm text-gray-500">
                     <span class="bg-gray-200 rounded-full px-3 py-1">熱愛健行者</span>
                     <span class="bg-gray-200 rounded-full px-3 py-1">親近自然</span>
@@ -79,10 +89,14 @@
             <!-- 龜山島行程 -->
             <div id="guishan" class="bg-gradient-to-br from-blue-50 to-blue-100 rounded-2xl shadow-md p-6 border border-blue-200">
                 <h2 class="text-2xl font-bold text-blue-800 mb-4">龜山島：登島探秘與海上巡禮</h2>
-                <p class="text-gray-700 leading-relaxed mb-4">
-                    **07:00 台北車站出發。**
-                    從烏石港出海，繞行龜山島欣賞獨特的「龜山八景」，若幸運的話還能近距離看到成群的鯨豚。結束海上行程後，可到**頭城老街**感受宜蘭文化，品嚐在地美食。是個結合海上探險與陸地文化的豐富行程。**預計18:00返回台北車站。**
+                <p class="text-gray-700 leading-relaxed mb-2">
+                    行程將從台北車站展開，建議於上午7點前抵達。預計18:00返回台北車站。
                 </p>
+                <ul class="list-disc list-inside text-gray-700 space-y-1 mb-4">
+                    <li>海上巡禮：從烏石港出海，繞行龜山島欣賞「龜山八景」。</li>
+                    <li>賞鯨豚：若幸運的話還能近距離看到成群的鯨豚。</li>
+                    <li>頭城老街：回程到頭城老街感受宜蘭文化與在地美食。</li>
+                </ul>
                 <div class="flex flex-wrap gap-2 text-sm text-gray-500">
                     <span class="bg-gray-200 rounded-full px-3 py-1">海上生態愛好者</span>
                     <span class="bg-gray-200 rounded-full px-3 py-1">特殊地景愛好者</span>
@@ -92,10 +106,14 @@
             <!-- 太平山行程 -->
             <div id="taipingshan" class="bg-gradient-to-br from-violet-50 to-violet-100 rounded-2xl shadow-md p-6 border border-violet-200">
                 <h2 class="text-2xl font-bold text-violet-800 mb-4">太平山：雲霧仙境與高山步道</h2>
-                <p class="text-gray-700 leading-relaxed mb-4">
-                    **07:00 台北車站出發。**
-                    沉浸在高山森林的芬多精與自然美景中。走訪 CNN 評選的「全球最美小路」**見晴懷古步道**，體驗獨特的**太平山蹦蹦車**，並在**鳩之澤溫泉**中享受溫泉煮食與泡湯的樂趣。**預計18:00返回台北車站。**
+                <p class="text-gray-700 leading-relaxed mb-2">
+                    行程將從台北車站展開，建議於上午7點前抵達。預計18:00返回台北車站。
                 </p>
+                <ul class="list-disc list-inside text-gray-700 space-y-1 mb-4">
+                    <li>見晴懷古步道：走訪 CNN 評選的「全球最美小路」。</li>
+                    <li>太平山蹦蹦車：體驗獨特的懷舊森林鐵道。</li>
+                    <li>鳩之澤溫泉：享受溫泉煮食與泡湯的樂趣。</li>
+                </ul>
                 <div class="flex flex-wrap gap-2 text-sm text-gray-500">
                     <span class="bg-gray-200 rounded-full px-3 py-1">熱愛健行者</span>
                     <span class="bg-gray-200 rounded-full px-3 py-1">享受森林浴</span>
@@ -105,10 +123,14 @@
             <!-- 清水地熱行程 -->
             <div id="qingshui" class="bg-gradient-to-br from-red-50 to-red-100 rounded-2xl shadow-md p-6 border border-red-200">
                 <h2 class="text-2xl font-bold text-red-800 mb-4">清水地熱：溫泉煮食與親子同樂</h2>
-                <p class="text-gray-700 leading-relaxed mb-4">
-                    **07:00 台北車站出發。**
-                    抵達**清水地熱公園**後，體驗用溫泉煮食的樂趣。下午可至附近的**三星鄉**，體驗親手拔蔥、做蔥油餅 DIY，感受農村生活。最後在回程前到**羅東夜市**品嚐人氣小吃。**預計18:00返回台北車站。**
+                <p class="text-gray-700 leading-relaxed mb-2">
+                    行程將從台北車站展開，建議於上午7點前抵達。預計18:00返回台北車站。
                 </p>
+                <ul class="list-disc list-inside text-gray-700 space-y-1 mb-4">
+                    <li>清水地熱：體驗用溫泉煮食的樂趣。</li>
+                    <li>三星蔥：到三星鄉體驗拔蔥、做蔥油餅 DIY。</li>
+                    <li>羅東夜市：回程前到羅東夜市品嚐人氣小吃。</li>
+                </ul>
                 <div class="flex flex-wrap gap-2 text-sm text-gray-500">
                     <span class="bg-gray-200 rounded-full px-3 py-1">美食主義者</span>
                     <span class="bg-gray-200 rounded-full px-3 py-1">親子同樂</span>
