--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <body class="bg-gray-100 p-4 sm:p-8">
 
     <div class="max-w-4xl mx-auto bg-white rounded-3xl shadow-xl p-6 sm:p-10 mb-8">
+        <h1 class="text-3xl sm:text-4xl font-bold text-center text-teal-600 mb-2">台灣一日遊行程票選</h1>
+        <p class="text-center text-gray-500 mb-8">為下一次的團體旅行，從以下精彩行程中選擇您最喜歡的一個。</p>
 
         <!-- 選單區塊 -->
         <nav class="mb-8 p-4 bg-teal-50 rounded-xl shadow-inner">
@@ -38,7 +40,7 @@
             <div id="taipei" class="bg-gradient-to-br from-cyan-50 to-cyan-100 rounded-2xl shadow-md p-6 border border-cyan-200">
                 <h2 class="text-2xl font-bold text-cyan-800 mb-4">北台灣：經典地標巡禮</h2>
                 <p class="text-gray-700 leading-relaxed mb-2">
-                    行程將從台北車站展開，建議於上午7點前抵達。預計18:00返回台北車站。
+                    行程將從台北車站展開，上午7點出發。預計18:00返回台北車站。
                 </p>
                 <ul class="list-disc list-inside text-gray-700 space-y-1 mb-4">
                     <li>野柳：欣賞鬼斧神工的女王頭地景。</li>
@@ -56,7 +58,7 @@
             <div id="miaoli" class="bg-gradient-to-br from-lime-50 to-lime-100 rounded-2xl shadow-md p-6 border border-lime-200">
                 <h2 class="text-2xl font-bold text-lime-800 mb-4">苗栗：悠閒客家美食之旅</h2>
                 <p class="text-gray-700 leading-relaxed mb-2">
-                    行程將從台北車站展開，建議於上午7點前抵達。預計18:00返回台北車站。
+                    行程將從台北車站展開，上午7點出發。預計18:00返回台北車站。
                 </p>
                 <ul class="list-disc list-inside text-gray-700 space-y-1 mb-4">
                     <li>三義：探訪舊山線鐵道勝興車站。</li>
@@ -73,7 +75,7 @@
             <div id="lalashan" class="bg-gradient-to-br from-amber-50 to-amber-100 rounded-2xl shadow-md p-6 border border-amber-200">
                 <h2 class="text-2xl font-bold text-amber-800 mb-4">拉拉山：原始森林與高山果物之旅</h2>
                 <p class="text-gray-700 leading-relaxed mb-2">
-                    行程將從台北車站展開，建議於上午7點前抵達。預計18:00返回台北車站。
+                    行程將從台北車站展開，上午7點出發。預計18:00返回台北車站。
                 </p>
                 <ul class="list-disc list-inside text-gray-700 space-y-1 mb-4">
                     <li>巨木林：沉浸在原始森林中，欣賞千年神木群。</li>
@@ -90,7 +92,7 @@
             <div id="guishan" class="bg-gradient-to-br from-blue-50 to-blue-100 rounded-2xl shadow-md p-6 border border-blue-200">
                 <h2 class="text-2xl font-bold text-blue-800 mb-4">龜山島：登島探秘與海上巡禮</h2>
                 <p class="text-gray-700 leading-relaxed mb-2">
-                    行程將從台北車站展開，建議於上午7點前抵達。預計18:00返回台北車站。
+                    行程將從台北車站展開，上午7點出發。預計18:00返回台北車站。
                 </p>
                 <ul class="list-disc list-inside text-gray-700 space-y-1 mb-4">
                     <li>海上巡禮：從烏石港出海，繞行龜山島欣賞「龜山八景」。</li>
@@ -107,7 +109,7 @@
             <div id="taipingshan" class="bg-gradient-to-br from-violet-50 to-violet-100 rounded-2xl shadow-md p-6 border border-violet-200">
                 <h2 class="text-2xl font-bold text-violet-800 mb-4">太平山：雲霧仙境與高山步道</h2>
                 <p class="text-gray-700 leading-relaxed mb-2">
-                    行程將從台北車站展開，建議於上午7點前抵達。預計18:00返回台北車站。
+                    行程將從台北車站展開，上午7點出發。預計18:00返回台北車站。
                 </p>
                 <ul class="list-disc list-inside text-gray-700 space-y-1 mb-4">
                     <li>見晴懷古步道：走訪 CNN 評選的「全球最美小路」。</li>
@@ -122,18 +124,18 @@
 
             <!-- 清水地熱行程 -->
             <div id="qingshui" class="bg-gradient-to-br from-red-50 to-red-100 rounded-2xl shadow-md p-6 border border-red-200">
-                <h2 class="text-2xl font-bold text-red-800 mb-4">清水地熱：溫泉煮食與親子同樂</h2>
+                <h2 class="text-2xl font-bold text-red-800 mb-4">清水地熱：溫泉煮食與同仁同樂</h2>
                 <p class="text-gray-700 leading-relaxed mb-2">
-                    行程將從台北車站展開，建議於上午7點前抵達。預計18:00返回台北車站。
+                    行程將從台北車站展開，上午7點出發。預計18:00返回台北車站。
                 </p>
                 <ul class="list-disc list-inside text-gray-700 space-y-1 mb-4">
                     <li>清水地熱：體驗用溫泉煮食的樂趣。</li>
                     <li>三星蔥：到三星鄉體驗拔蔥、做蔥油餅 DIY。</li>
-                    <li>羅東夜市：回程前到羅東夜市品嚐人氣小吃。</li>
+                    <li>周邊活動：可前往國立傳統藝術中心感受文化氛圍。</li>
                 </ul>
                 <div class="flex flex-wrap gap-2 text-sm text-gray-500">
                     <span class="bg-gray-200 rounded-full px-3 py-1">美食主義者</span>
-                    <span class="bg-gray-200 rounded-full px-3 py-1">親子同樂</span>
+                    <span class="bg-gray-200 rounded-full px-3 py-1">團體活動</span>
                 </div>
             </div>
         </div>
