--- a/index.html
+++ b/index.html
@@ -87,8 +87,19 @@
                             </svg>
                         </div>
                         <div>
-                            <p class="font-semibold text-xl md:text-2xl text-gray-900">15:00 | 奕順軒羅東店，伴手禮大採購</p>
-                            <p class="mt-1 text-gray-600">來到宜蘭知名的奕順軒羅東店，您可以盡情選購各種美味的伴手禮。這趟旅程，公司也特別準備了精選伴手禮與您分享這份喜悅。奕順軒以獨特的奶凍捲與各式糕點聞名，是到宜蘭不可錯過的伴手禮選擇。</p>
+                            <p class="font-semibold text-xl md:text-2xl text-gray-900">15:00 | 吉姆老爹啤酒工廠，享受在地精釀啤酒</p>
+                            <p class="mt-1 text-gray-600">我們將前往充滿美式風格的吉姆老爹啤酒工廠。在這裡，您可以參觀啤酒釀造的過程，並在寬敞的戶外空間品嚐最新鮮的精釀啤酒。感受微風輕拂，享受悠閒的午後時光。</p>
+                        </div>
+                    </li>
+                    <li class="flex items-start space-x-4">
+                        <div class="flex-shrink-0 mt-1">
+                            <svg class="h-6 w-6 text-lime-500" fill="currentColor" viewBox="0 0 20 20">
+                                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd" />
+                            </svg>
+                        </div>
+                        <div>
+                            <p class="font-semibold text-xl md:text-2xl text-gray-900">16:00 | 奕順軒宜蘭店，伴手禮大採購</p>
+                            <p class="mt-1 text-gray-600">來到宜蘭知名的奕順軒，您可以盡情選購各種美味的伴手禮。奕順軒以獨特的奶凍捲與各式糕點聞名，是到宜蘭不可錯過的伴手禮選擇。</p>
                         </div>
                     </li>
                     <li class="flex items-start space-x-4">
@@ -98,17 +109,11 @@
                             </svg>
                         </div>
                         <div>
-                            <p class="font-semibold text-xl md:text-2xl text-gray-900">16:30 | 快樂賦歸，期待下次再見</p>
+                            <p class="font-semibold text-xl md:text-2xl text-gray-900">17:00 | 快樂賦歸，期待下次再見</p>
                             <p class="mt-1 text-gray-600">帶著滿滿的戰利品與美好的回憶，搭上遊覽車返回公司。這趟旅程雖短，但我們一同創造的回憶將會長存！</p>
                         </div>
                     </li>
                 </ul>
-
-                <!-- 備註區塊 -->
-                <div class="mt-8 pt-4 border-t border-gray-200">
-                    <h3 class="font-semibold text-base text-gray-800 mb-2">備註：</h3>
-                    <p class="text-sm text-gray-600">所有參與旅遊以及事先請假的同仁，都會收到一份公司準備的伴手禮，讓所有同仁都能感受到出版處的溫暖！</p>
-                </div>
             </div>
         </div>
     </div>
