--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         </div>
                         <div>
                             <p class="font-semibold text-xl md:text-2xl text-gray-900">15:00 | 吉姆老爹啤酒工廠，享受在地精釀啤酒</p>
-                            <p class="mt-1 text-gray-600">我們將前往充滿美式風格的吉姆老爹啤酒工廠。在這裡，您可以參觀啤酒釀造的過程，並在寬敞的戶外空間品嚐最新鮮的精釀啤酒。感受微風輕拂，享受悠閒的午後時光。</p>
+                            <p class="mt-1 text-gray-600">歡迎來到充滿活力的吉姆老爹啤酒工廠！這座帶有美式鄉村風格的園區，不僅能讓您親眼見證精釀啤酒的誕生過程，還可以在寬敞的戶外區，一邊感受宜蘭的自然微風，一邊細細品味多樣化的獨家精釀啤酒。這裡不只是工廠，更是一個可以讓您放鬆身心、與朋友暢聊的絕佳場所。</p>
                         </div>
                     </li>
                     <li class="flex items-start space-x-4">
